--- a/1-Java基础/1-16【JVM4-类加载、编译运行处理】.md
+++ b/1-Java基础/1-16【JVM4-类加载、编译运行处理】.md
@@ -1,78 +1,102 @@
+Java文件运行流程如下：编写 -> 编译 -> 运行。编写一个HelloWorld文件，然后使用命令将其编译为.class字节码文件，最后运行它。
+
+JVM 想要执行这个 .class 文件，需要调用类加载器来加载它，它就像一个搬运工一样，会把所有的 .class 文件全部搬进 JVM 里面，并将这些内容转换成方法区中的运行时数据结构。ClassLoader 只负责 class 文件的加载，而是否能够运行则由 Execution Engine 来决定。
+
+从类被加载到虚拟机内存中开始，到释放内存总共有 7 个步骤：加载，验证，准备，解析，初始化，使用，卸载。其中验证，准备，解析三个部分统称为连接/链接。
+
 # 第一章 类加载阶段
 
-类加载完成后会在方法区内保存类的字节码二进制数据，在堆区中保存类的Class对象。
+Class 文件需要加载到虚拟机中之后才能运行和使用，系统加载 Class 类型的文件主要三步：加载->连接->初始化。连接过程又可分为三步：验证->准备->解析。所以类加载阶段一共有六个步骤：加载 -> 验证 -> 准备 -> 解析 -> 初始化 。再加上使用和类卸载那么类的声明周期就一共有七个阶段了：加载，验证，准备，解析，初始化，使用，卸载。
+
+类加载完成后会在方法区内保存类的字节码二进制数据，在堆区中保存类的Class对象。方法区会存储已被虚拟机加载的类信息、字段信息、方法信息、常量、静态变量、即时编译器编译后的代码缓存等数据。
 
 ## 1.1 加载阶段
 
-将类的字节码载入方法区（1.8后为元空间实现，在本地内存中）中，内部采用 C++ 的 instanceKlass 描述 java 类，它的重要 ﬁeld 有：
+加载这一步主要是通过类加载器完成。类加载器有很多种，当我们想要加载一个类的时候，具体是哪个类加载器加载由 双亲委派模型 决定（不过，我们也能打破由双亲委派模型）。该阶段主要完成下面 3 件事情：
 
-- _java_mirror 即 java 的类镜像，例如对 String 来说，它的镜像类就是 String.class，作用是把 klass 暴露给 java 使用
-- _super 即父类
-- _ﬁelds 即成员变量
-- _methods 即方法
-- _constants 即常量池
-- _class_loader 即类加载器
-- _vtable 虚方法表
-- _itable 接口方法
+1. 通过全类名获取定义此类的二进制字节流（可以从`ZIP`、`JAR`、`EAR`、`WAR` 、网络、动态代理技术运行时动态生成、其他文件`JSP`生成）
+2. 将字节流所代表的静态存储结构转换为方法区的运行时数据结构。
+3. 在内存中生成一个代表该类的 `Class` 对象，作为方法区这些数据的访问入口。
 
-如果这个类还有父类没有加载，**先加载父类**
+将类的字节码载入方法区（JDK1.7之前由永久代实现，JDK1.8后为元空间实现，在本地内存中）中，内部采用 C++ 的 `instanceKlass` 描述 java 类，它的 ﬁeld 有：
 
-加载和链接可能是**交替运行**的
-
-![](D:\Java\笔记\图片\1-16【jvm】\16.png)
+| C++描述Java类字段 | 描述                                                         |
+| ----------------- | ------------------------------------------------------------ |
+| _java_mirror      | 类对象/镜像类。对 String 来说，镜像类是 String.class，作用是把 klass 暴露给 java 使用 |
+| _super            | 父类。如果这个类还有父类没有加载，先加载父类。               |
+| _ﬁelds            | 成员变量                                                     |
+| _methods          | 方法                                                         |
+| _constants        | 常量池                                                       |
+| _class_loader     | 类加载器，每个 Java 类都有一个引用指向加载它的 `ClassLoader` |
+| _vtable           | 虚方法表                                                     |
+| _itable           | 接口方法                                                     |
 
 - instanceKlass保存在方法区。JDK 8以后，方法区由元空间实现。
 - instanceKlass在方法区加载的同时，会在堆内存中生成一个_java_mirror的镜像文件，俗称的**类对象**。
 - InstanceKlass和类对象互相保存了对方的地址
 - 类的实例对象在对象头中保存了*.class（类对象）的地址。让对象可以通过其找到方法区中的instanceKlass，从而获取类的各种信息。
 
-## 1.2 链接阶段
+![](D:\Java\笔记\图片\1-16【JVM4-类加载、编译运行处理】\1-1.png)
+
+加载阶段与连接阶段的部分动作(如一部分字节码文件格式验证动作)是交叉进行的，加载阶段尚未结束，连接阶段可能就已经开始了。所以说加载和链接可能是交替运行的。
+
+## 1.2 连接/链接阶段
 
 将类的二进制数据合并到JRE中。
 
 ### 1.2.1 验证
 
-验证类是否符合 JVM规范，安全性检查
+这一阶段的目的是确保 Class 文件的字节流中包含的信息符合《Java 虚拟机规范》的全部约束要求，保证这些信息被当作代码运行后不会危害虚拟机自身的安全。验证类是否符合 JVM规范，安全性检查。
 
-用 UE 等支持二进制的编辑器修改 HelloWorld.class 的魔数，在控制台运行。这里用的是Notepad++，里面有插件
+验证阶段这一步在整个类加载过程中耗费的资源还是相对较多的，但很有必要，可以有效防止恶意代码的执行。任何时候，程序安全都是第一位。不过，验证阶段也不是必须要执行的阶段。如果程序运行的全部代码(包括自己编写的、第三方包中的、从外部加载的、动态生成的等所有代码)都已经被反复使用和验证过，在生产环境的实施阶段就可以考虑使用 `-Xverify:none` 参数来关闭大部分的类验证措施，以缩短虚拟机类加载的时间。
 
-```java
-Error: A JNI error has occurred, please check your installation and try again
-Exception in thread "main" java.lang.ClassFormatError: Incompatible magic value 3405691578 in class file Demo01
-        at java.lang.ClassLoader.defineClass1(Native Method)
-        at java.lang.ClassLoader.defineClass(Unknown Source)
-        at java.security.SecureClassLoader.defineClass(Unknown Source)
-        at java.net.URLClassLoader.defineClass(Unknown Source)
-        at java.net.URLClassLoader.access$100(Unknown Source)
-        at java.net.URLClassLoader$1.run(Unknown Source)
-        at java.net.URLClassLoader$1.run(Unknown Source)
-        at java.security.AccessController.doPrivileged(Native Method)
-        at java.net.URLClassLoader.findClass(Unknown Source)
-        at java.lang.ClassLoader.loadClass(Unknown Source)
-        at sun.misc.Launcher$AppClassLoader.loadClass(Unknown Source)
-        at java.lang.ClassLoader.loadClass(Unknown Source)
-        at sun.launcher.LauncherHelper.checkAndLoadMain(Unknown Source)
-```
+验证阶段主要由四个检验阶段组成：
+
+1. 文件格式验证（Class 文件格式检查）。验证字节流是否符合Class文件格式的规范，例如魔数是否是 ca fe ba be、主版本号是否在当前虚拟机处理范围之内、常量池中常量是否有不被支持的类型。
+2. 元数据验证（字节码语义检查）。这个阶段是对字节码描述的信息进行语义分析，以保证起描述的信息符合java语言规范要求。
+3. 字节码验证（程序语义检查）。进行数据流和控制流分析，这个阶段对类的方法体进行校验分析，这个阶段的任务是保证被校验类的方法在运行时不会做出危害虚拟机安全的行为。
+4. 符号引用验证（类的正确性检查）。符号引用中通过字符串描述的全限定名是否能找到对应的类、符号引用类中的类，字段和方法的访问性(private、protected、public、default)是否可被当前类访问。
+
+文件格式验证这一阶段是基于该类的二进制字节流进行的，主要目的是保证输入的字节流能正确地解析并存储于方法区之内，格式上符合描述一个 Java 类型信息的要求。除了这一阶段之外，其余三个验证阶段都是基于方法区的存储结构上进行的，不会再直接读取、操作字节流了。
+
+> 方法区属于是 JVM 运行时数据区域的一块逻辑区域，是各个线程共享的内存区域。当虚拟机要使用一个类时，它需要读取并解析 Class 文件获取相关信息，再将信息存入到方法区。方法区会存储已被虚拟机加载的 类信息、字段信息、方法信息、常量、静态变量、即时编译器编译后的代码缓存等数据。
+
+符号引用验证的主要目的是确保解析阶段能正常执行，如果无法通过符号引用验证，JVM 会抛出异常，比如：
+
+- `IllegalAccessError`：当类试图访问或修改它没有权限访问的方法或者字段时，抛出该异常。
+- `NoSuchFieldError`：当类试图访问或修改一个指定的对象字段，而该对象不再包含该字段时，抛出该异常。
+- `NoSuchMethodError`：当类试图访问一个指定的方法，而该方法不存在时，抛出该异常。
 
 ### 1.2.2 准备
 
-JVM在该阶段为 static 变量分配空间，设置默认值（对应数据类型的默认初始值如：0、0L、NULL、false）。这些变量所使用的内存都将在方法区（根据版本）中进行分配。
+JVM在准备阶段为类 static 静态变量在方法区（根据版本）分配空间以及设置默认值。
 
-- static变量在JDK 7以前是存储与instanceKlass末尾。但在JDK 7以后就存储在_java_mirror末尾了
+* 进行内存分配的仅包括类变量（ Class Variables ，即静态变量），而不包括实例变量。实例变量会在对象实例化时随着对象一块分配在 Java 堆中。
+* Static变量在分配空间和赋值是在两个阶段完成的，分配内存空间以及设置默认值在准备阶段完成，赋值在初始化阶段完成。
+* 如果 Static 变量是 ﬁnal 修饰的常量或者字符串常量，那么编译阶段值就会被确定，赋值会在准备阶段完成。
+* 如果 Static 变量是 ﬁnal 的，但属于引用类型，那么赋值会在初始化阶段完成。
 
-- static变量在分配空间和赋值是在两个阶段完成的。分配内存空间在准备阶段完成，赋值在初始化阶段完成
+类变量所使用的内存都应当在方法区（JDK1.7永久代实现，JDK1.8元空间实现）中进行分配。JDK 7 之前，JVM使用永久代实现方法区完全符合这种概念。 而在 JDK 7 及之后，JVM把原本放在永久代的字符串常量池、静态变量等移动到堆中，这个时候类变量则会随着 Class 对象一起存放在 Java 堆中。
 
-  所以如果是非static变量那么不会在准备阶段分配内存空间。
+所以Static 变量在JDK 7以前是存储与`instanceKlass`末尾。但在JDK 7及以后就存储在`_java_mirror`末尾了
 
-  如果是static变量会在准备阶段分配内存空间，并且设置默认值，注意在这里设置了默认值了。赋值的话在初始化阶段完成。
+![](D:\Java\笔记\图片\1-16【JVM4-类加载、编译运行处理】\-12方法区.png)
 
-- 如果 static 变量是 ﬁnal 的基本类型，以及字符串常量，那么编译阶段值就确定了，赋值在准备阶段完成
+![](D:\Java\笔记\图片\1-16【JVM4-类加载、编译运行处理】\1-1.png)
 
-- 如果 static 变量是 ﬁnal 的，但属于引用类型，那么赋值也会在初始化阶段完成
+| 数据类型  | 设置初值 | 数据类型 | 初始值   |
+| --------- | -------- | -------- | -------- |
+| byte      | (byte)0  | float    | 0.0f     |
+| short     | (short)0 | double   | 0.0d     |
+| int       | 0        | char     | '\u0000' |
+| long      | 0L       | boolean  | false    |
+| reference | null     |          |          |
 
 ### 1.2.3 解析
 
-将常量池中的符号引用解析为直接引用
+解析阶段是虚拟机将常量池内的符号引用解析为直接引用的过程。
+
+符号引用就是一个类（接口、方法、字段等）中引入了其他的类，可是JVM并不知道引入的其他类在哪里，所以就用唯一符号来代替，等到类加载器去解析的时候，就通过符号引用找到那个引用类的地址，这个地址也就是直接引用。常见的符号引用包括类符号引用、接口符号引用、方法符号引用、字段符号引用。
 
 ```java
 public class Demo01 {
@@ -94,17 +118,24 @@ class D {
 }
 ```
 
-未解析时，常量池中的看到的对象仅是符号，未真正的存在于内存中。
+未解析时，常量池中的看到的对象仅是符号，未真正的存在于内存中。接下来借助HSDB工具查看一下：
 
-使用jps命令查看进程ID：
-
-```java
-PS D:\Java\vscode-java\MavenProjects\jvm> jps
+```sh
+# 使用jps命令查看进程ID 
+C:\Windows\System32>jps
 13488 Demo01
 4964 Jps
-```
 
-打开HSDB：`PS E:\JAVA\jdk1.8.0_144> java -cp ./lib/sa-jdi.jar sun.jvm.hotspot.HSDB` 需要进入jdk安装目录.
+# 切换到JDK的家目录
+C:\Windows\System32>e:
+E:\> cd E:\Java\jdk1.8.0_144\bin
+
+# 在jdk\bin目录打开HSDB。在bin目录指定使用的Java版本为jdk1.8，否则使用的是配置的JAVA_HOME版本
+E:\JAVA\jdk1.8.0_144\bin> java -cp ..\lib\sa-jdi.jar sun.jvm.hotspot.HSDB
+
+# cmd窗口阻塞并打开了HSDB工具，如果打开出错，那么将jdk\jre\bin\sawindbg.dll复制到jre.1.8.0_144\bin下面
+# 打开之后File -> Attach to HotSpot process输入进程ID，进程被连接上了
+```
 
 输入进程ID，打开`Tools->Class Brwser`，可以看到此时只加载了类C。
 
@@ -136,24 +167,48 @@ class D {
 }
 ```
 
-解析以后，会将常量池中的符号引用解析为直接引用。可以看到，此时已加载并解析了类C和类D
+解析以后，会将常量池中的符号引用解析为直接引用。可以看到，此时已加载并解析了类C和类D。
 
 ![](D:\Java\笔记\图片\1-16【jvm】\17-2.png)
 
 ## 1.3 初始化阶段
 
-初始化阶段就是执行类构造器`cinit()`（有一个老师说是`clint()`）方法的过程，虚拟机会保证这个类的『构造方法』的线程安全，加锁。
+初始化阶段就是执行类构造器`clinit()`方法的过程，这一步 JVM 才开始真正执行类中定义的 Java 程序代码。`clinit()`方法是由编译器自动收集类中的所有类变量的赋值动作和静态语句块（`static{}`块）中的语句合并产生的。虚拟机会保证这个类的『构造方法』的线程安全，加锁。
 
-`cinit()`方法是由编译器自动收集类中的所有类变量的赋值动作和静态语句块（`static{}`块）中的语句合并产生的。
+```java
+public class Load4 {
+    public static void main(String[] args) {
+        System.out.println(E.a);
+        System.out.println(E.b);
+        System.out.println(E.c);
+    }
+}
+class E {
+    // 准备阶段为静态变量在方法区分配空间以及设置默认值。
+    // 但是static final修饰的基本类型以及常量在编译阶段值就被确定了，准备阶段直接进行赋值，不会设置默认值
+    // 所以这两个在链接-准备阶段就会赋值完毕，不会导致类的初始化。
+    public static final int a = 10;
+    public static final String b = "hello";
+    // 包装类型，导致初始化
+    public static final Integer c = 20;
+    
+    // 验证初始化就是看看static静态代码块是否会被执行，很显然会被执行。打印E.c之前会初始化类，打印语句。
+    staic {
+        System.out.println("初始化了");
+    }
+}
+```
 
-类的初始化是懒惰的，以下情况会初始化
+类的初始化是懒惰的，以下情况会初始化：
 
-- main 方法所在的类，总会被首先初始化
-- 首次访问这个类的静态变量或静态方法时
-- 子类初始化，如果父类还没初始化，会引发
-- 子类访问父类的静态变量，只会触发父类的初始化
-- Class.forName
-- new 会导致初始化
+* 主方法（main方法）所在的类首先被初始化。
+* 遇到`new`、`getstatic`、`putstatic`或`invokestatic` 这 4 条字节码指令时，会进行初始化。也就是new对象、访问该类静态变量或者静态方法就会将该类进行初始化。
+  - 当 jvm 执行 `new` 指令时会初始化类。即当程序创建一个类的实例对象。
+  - 当 jvm 执行 `getstatic` 指令时会初始化类。即程序访问类的静态变量(不是静态常量，常量会被加载到运行时常量池)。
+  - 当 jvm 执行 `putstatic` 指令时会初始化类。即程序给类的静态变量赋值。
+  - 当 jvm 执行 `invokestatic` 指令时会初始化类。即程序调用类的静态方法。
+* 使用 `java.lang.reflect` 包的方法对类进行反射调用时如 `Class.forname("...")`, `newInstance()` 等等。如果类没初始化，需要触发其初始化。
+* 初始化一个类，如果其父类还未初始化，则先触发该父类的初始化。
 
 以下情况不会初始化
 
@@ -173,7 +228,7 @@ class A {
     }
 }
 class B extends A {
-    final static double b = 5.0;
+    static final double b = 5.0;
     static boolean c = false;
     static {
         System.out.println("b init");
@@ -214,28 +269,7 @@ public class Load3 {
 }
 ```
 
-## 1.4 练习初始化阶段
-
-从字节码分析，使用 a，b，c 这三个常量是否会导致 E 初始化
-
-```java
-public class Load4 {
-    public static void main(String[] args) {
-        System.out.println(E.a);
-        System.out.println(E.b);
-        System.out.println(E.c);
-    }
-}
-class E {
-    public static final int a = 10;
-    public static final String b = "hello";
-    public static final Integer c = 20;
-}
-```
-
-如果是a，b两个常量并不会导致E初始化，他们会在链接准备阶段就赋值完毕了。但是如果是c的话，因为是包装类型，所以会初始化。
-
-> 如果 static 变量是 ﬁnal 的基本类型，以及字符串常量，那么编译阶段值就确定了，赋值在准备阶段完成。
+## 1.4 懒惰初始化单例模式
 
 典型应用 - 完成懒惰初始化单例模式
 
@@ -275,190 +309,139 @@ public class Demo01 {
 - 懒惰实例化
 - 初始化时的线程安全是有保障的
 
-# 第二章 类加载器
+## 1.5 类卸载
 
-Java虚拟机设计团队有意把类加载阶段中的 `通过一个类的全限定名来获取描述该类的二进制字节流` 这个动作放到Java虚拟机外部去实现，以便让应用程序自己决定如何去获取所需的类。实现这个动作的代码被称为“类加载器”（ClassLoader）
+卸载类即该类的 Class 对象被 GC。卸载类需要满足 3 个要求:
 
-类加载器虽然只用于实现类的加载动作，但它在Java程序中起到的作用却远超类加载阶段。
+1. 该类的所有的实例对象都已被 GC，也就是说堆不存在该类的实例对象。
+2. 该类没有在其他任何地方被引用
+3. 该类的类加载器的实例已被 GC
 
-对于任意一个类，都必须由加载它的类加载器和这个类本身一起共同确立其在Java虚拟机中的唯一性，每一个类加载器，都拥有一个独立的类名称空间。这句话可以表达得更通俗一些：比较两个类是否“相等”，只有在这两个类是由同一个类加载器加载的前提下才有意义，否则，即使这两个类来源于同一个Class文件，被同一个Java虚拟机加载，只要加载它们的类加载器不同，那这两个类就必定不相等。
+所以，在 JVM 生命周期内，由 jvm 自带的类加载器加载的类是不会被卸载的。但是由我们自定义的类加载器加载的类是可能被卸载的。
 
-以JDK 8为例
+只要想通一点就好了，JDK 自带的 `BootstrapClassLoader`, `ExtClassLoader`, `AppClassLoader` 负责加载 JDK 提供的类，所以它们(类加载器的实例)肯定不会被回收。而我们自定义的类加载器的实例是可以被回收的，所以使用我们自定义加载器加载的类是可以被卸载掉的。
 
-| 名称                                        | 加载的类              | 说明                            |
-| ------------------------------------------- | --------------------- | ------------------------------- |
-| Bootstrap ClassLoader（启动类加载器）       | JAVA_HOME/jre/lib     | 无法直接访问                    |
-| Extension ClassLoader（拓展类加载器）       | JAVA_HOME/jre/lib/ext | 上级为Bootstrap，**显示为null** |
-| Application ClassLoader（应用程序类加载器） | classpath             | 上级为Extension                 |
-| 自定义类加载器                              | 自定义                | 上级为Application               |
+# 第二章 类加载器ClassLoader
 
-## 2.1 启动类加载器
+类加载器的主要作用就是加载 Java 类的字节码（ `.class` 文件）到 JVM 中（在内存中生成一个代表该类的 `Class` 对象）。 字节码可以是 Java 源程序（`.java`文件）经过 `javac` 编译得来，也可以是通过工具动态生成或者通过网络下载得来。
 
-用 Bootstrap 类加载器加载类：
+- 类加载器是一个负责加载类的对象，用于实现类加载过程中的加载这一步。
+- 每个 Java 类都有一个引用指向加载它的 `ClassLoader`。
+- 数组类不是通过 `ClassLoader` 创建的（数组类没有对应的二进制字节流），是由 JVM 直接生成的。
 
-```java
-package com.linxuan.demo03;
+![](D:\Java\笔记\图片\1-16【JVM4-类加载、编译运行处理】\1-1.png)
 
-public class TestBootstrapClassLoader {
-    static {
-        System.out.println("bootstrap BootstrapClassLoader init");
-    }
-}
-```
+JVM 启动的时候，并不会一次性加载所有的类，而是根据需要去动态加载。也就是说，大部分类在具体用到的时候才会去加载，这样对内存更加友好。
 
-```java
-package com.linxuan.demo03;
+对于已经加载的类会被放在 `ClassLoader` 中。在类加载的时候，系统会首先判断当前类是否被加载过。已经被加载的类会直接返回，否则才会尝试加载。也就是说，对于一个类加载器来说，相同二进制名称的类只会被加载一次。
 
-public class Demo01 {
-    public static void main(String[] args) throws ClassNotFoundException {
-        Class<?> bootStrapClass = Class.forName("com.linxuan.demo03.TestBootstrapClassLoader");
-        System.out.println(bootStrapClass.getClassLoader());
-    }
-}
-```
+以JDK 8为例常见的类加载器有：
 
-执行命令，可以看到如下输出：
+| 名称                                        | 加载的类              | 说明                        |
+| ------------------------------------------- | --------------------- | --------------------------- |
+| Bootstrap ClassLoader（启动类加载器）       | JAVA_HOME/jre/lib     | 无法直接访问                |
+| Extension ClassLoader（扩展类加载器）       | JAVA_HOME/jre/lib/ext | 上级为Bootstrap，显示为null |
+| Application ClassLoader（应用程序类加载器） | classpath             | 上级为Extension             |
+| 自定义类加载器                              | 自定义                | 上级为Application           |
 
-```apl
-# 进入class文件输出目录键入命令 设置该class字节码加载器为Bootstrap ClassLoader
-PS D:\Java\vscode-java\MavenProjects\jvm\target\classes> 
-											java -Xbootclasspath/a:. com/linxuan/demo03/Demo01   
-bootstrap BootstrapClassLoader init
-null			# 打印为NULL说明设置成功 因为Bootstrap ClassLoader是由C++编写 所以无法打印出来
-```
+JVM 中内置了三个重要的 `ClassLoader`：
 
-可通过在控制台输入指令，使得类被启动类加器加载：
-
-- -Xbootclasspath 表示设置 bootclasspath
-- 其中 `/a:.` 表示将当前目录追加至 bootclasspath 之后
-
-- 可以用这个办法替换核心类
-  - `java -Xbootclasspath:<new bootclasspath>`，完全替换
-  - `java -Xbootclasspath/a:<追加路径>`，后追加
-  - `java -Xbootclasspath/p:<追加路径>`，前追加
-
-## 2.2 拓展类加载器
+1. `BootstrapClassLoader`(启动类加载器) ：最顶层的加载类，由 C++实现，通常表示为 null，并且没有父级，主要用来加载 JDK 内部的核心类库（`%JAVA_HOME%/lib`目录下的 `rt.jar` 、`resources.jar` 、`charsets.jar`等 jar 包和类）以及被 `-Xbootclasspath`参数指定的路径下的所有类。
+2. `ExtensionClassLoader`(扩展类加载器) ：主要负责加载 `%JRE_HOME%/lib/ext` 目录下的 jar 包和类以及被 `java.ext.dirs` 系统变量所指定的路径下的所有类。
+3. `AppClassLoader`(应用程序类加载器) ：面向用户的加载器，负责加载当前应用 classpath 下的所有 jar 包和类。
 
 ```java
-package com.linxuan.demo03;
+public class PrintClassLoaderTree {
+    public static void main(String[] args) {
 
-public class Test {
-    static {
-        System.out.println("ClassPath Test init");
-    }
-}
-```
+        ClassLoader classLoader = PrintClassLoaderTree.class.getClassLoader();
 
-```java
-package com.linxuan.demo03;
-
-public class Demo01 {
-    public static void main(String[] args) throws ClassNotFoundException {
-        Class<?> testClass = Class.forName("com.linxuan.demo03.Test");
-        System.out.println(testClass.getClassLoader());
-    }
-}
-```
-
-直接运行主方法会输出如下内容：
-
-```apl
-ClassPath Test init
-sun.misc.Launcher$AppClassLoader@6d06d69c
-```
-
-写一个同名的类
-
-```java
-package com.linxuan.demo03;
-public class Test {
-    static {
-        System.out.println("ext G init");
-    }
-}
-```
-
-将其打成 jar 包，就会在`PS D:\Java\vscode-java\MavenProjects\jvm\target\classes`目录下面生成一个jar包。
-
-```java
-PS D:\Java\vscode-java\MavenProjects\jvm\target\classes> 
-    											jar -cvf my.jar .\com\linxuan\demo03\Test.class   
-已添加清单
-正在添加: com/linxuan/demo03/Test.class(输入 = 501) (输出 = 327)(压缩了 34%)
-```
-
-将 jar 包拷贝到 `JAVA_HOME/jre/lib/ext`，重新执行Demo01类里面的main方法，这时候输出就大不一样了：
-
-```apl
-ext G init
-sun.misc.Launcher$ExtClassLoader@232204a1
-```
-
-这是因为如果`classpath`和`JAVA_HOME/jre/lib/ext` 下有同名类，加载时会使用拓展类加载器加载。当应用程序类加载器发现拓展类加载器已将该同名类加载过了，则不会再次加载。
-
-## 2.3 双亲委派模式
-
-双亲委派模式，即调用类加载器ClassLoader 的 loadClass 方法时，查找类的规则
-
-> 这里的双亲，翻译为上级似乎更为合适，因为它们并没有继承关系
-
-loadClass源码如下：
-
-```java
-protected Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
-    synchronized (getClassLoadingLock(name)) {
-        // 1. 检查该类是否已经加载
-        Class<?> c = findLoadedClass(name);
-        if (c == null) {
-            long t0 = System.nanoTime();
-            try {
-                if (parent != null) {
-                    // 2. 有上级的话，委派上级 loadClass
-                    c = parent.loadClass(name, false);
-                } else {
-                    // 3. 如果没有上级了（ExtClassLoader），则委派BootstrapClassLoader
-                    BootstrapClassLoader c = findBootstrapClassOrNull(name);
-                }
-            } catch (ClassNotFoundException e) {
-            }
-            if (c == null) {
-                long t1 = System.nanoTime();
-                // 4. 每一层找不到，调用 findClass 方法（每个类加载器自己扩展）来加载
-                c = findClass(name);
-                // 5. 记录耗时
-                sun.misc.PerfCounter.getParentDelegationTime().addTime(t1 - t0);
-                sun.misc.PerfCounter.getFindClassTime().addElapsedTimeFrom(t1);
-                sun.misc.PerfCounter.getFindClasses().increment();
+        StringBuilder split = new StringBuilder("|-- ");
+        boolean needContinue = true;
+        while (needContinue){
+            System.out.println(split.toString() + classLoader);
+            if(classLoader == null){
+                needContinue = false;
+            }else{
+                classLoader = classLoader.getParent();
+                split.insert(0, "\t");
             }
         }
-        if (resolve) {
-            resolveClass(c);
+    }
+}
+```
+
+```apl
+|-- sun.misc.Launcher$AppClassLoader@18b4aac2
+    |-- sun.misc.Launcher$ExtClassLoader@53bd815b
+        |-- null
+```
+
+从输出结果可以看出：
+
+- 我们编写的 Java 类 `PrintClassLoaderTree` 的 `ClassLoader` 是`AppClassLoader`；
+- `AppClassLoader`的父 `ClassLoader` 是`ExtClassLoader`；
+- `ExtClassLoader`的父`ClassLoader`是`Bootstrap ClassLoader`，因此输出结果为 null。
+
+## 2.1 自定义类加载器
+
+当我们想要加载非 classpath 随意路径中的类文件的时候可以通过自定义类加载器来解决。
+
+除了 `BootstrapClassLoader` 其他类加载器均由 Java 实现且全部继承自`java.lang.ClassLoader`。如果我们要自定义自己的类加载器，很明显需要继承 `ClassLoader`抽象类。
+
+`ClassLoader` 类有两个关键的方法：
+
+- `protected Class loadClass(String name, boolean resolve)`：加载指定二进制名称的类，实现了双亲委派机制。`name`为类的二进制名称，`resove`如果为 true，在加载时调用`resolveClass(Class<?> c)`方法解析该类。
+- `protected Class findClass(String name)`：根据类的二进制名称来查找类，默认实现是空方法。
+
+如果我们不想打破双亲委派模型，就重写 `ClassLoader` 类中的 `findClass()` 方法即可，无法被父类加载器加载的类最终会通过这个方法被加载。但是，如果想打破双亲委派模型则需要重写 `loadClass()` 方法。
+
+```java
+D:\Bprogram\java\myclasspath>javap HelloWorld.class
+Compiled from "HelloWord.java"
+class HelloWorld {
+  HelloWorld();
+  public static void main(java.lang.String[]);
+}
+```
+
+```java
+class MyClassLoader extends ClassLoader {
+
+    @Override
+    protected Class<?> findClass(String name) throws ClassNotFoundException {
+        String path = "D:\\Bprogram\\java\\myclasspath\\" + name + ".class";
+
+        try {
+            ByteArrayOutputStream os = new ByteArrayOutputStream();
+            Files.copy(Paths.get(path), os);
+
+            // 得到字节数组
+            byte[] bytes = os.toByteArray();
+
+            // byte[] -> *.class
+            return defineClass(name, bytes, 0, bytes.length);
+
+        } catch (IOException e) {
+            e.printStackTrace();
+            throw new ClassNotFoundException("类文件未找到", e);
         }
-        return c;
     }
 }
 ```
 
 ```java
 public class Demo01 {
-    public static void main(String[] args) throws ClassNotFoundException {
-        Class<?> testClass = Demo01.class.getClassLoader().loadClass("com.linxuan.demo03.Test");
-        System.out.println(testClass.getClassLoader());
+    public static void main(String[] args) throws Exception {
+        MyClassLoader classLoader = new MyClassLoader();
+        Class<?> c1 = classLoader.loadClass("HelloWorld");
+        System.out.println(c1.getClassLoader());
     }
 }
+// 输出信息如下：com.linxuan.demo01.MyClassLoader@42a57993
 ```
 
-执行流程为：
-
-1. `sun.misc.Launcher$AppClassLoader` //1 处， 开始查看已加载的类，结果没有
-2. `sun.misc.Launcher$AppClassLoader` // 2 处，委派上级`sun.misc.Launcher$ExtClassLoader.loadClass()`
-3. `sun.misc.Launcher$ExtClassLoader` // 1 处，查看已加载的类，结果没有
-4. `sun.misc.Launcher$ExtClassLoader` // 3 处，没有上级了，则委派 `BootstrapClassLoader`查找
-5. `BootstrapClassLoader` 是在 `JAVA_HOME/jre/lib` 下找 H 这个类，显然没有
-6. `sun.misc.Launcher$ExtClassLoader` // 4 处，调用自己的 findClass 方法，是在`JAVA_HOME/jre/lib/ext` 下找 H 这个类，显然没有，回到 `sun.misc.Launcher$AppClassLoader`的 // 2 处
-7. 继续执行到 `sun.misc.Launcher$AppClassLoader` // 4 处，调用它自己的 findClass 方法，在classpath 下查找，找到了
-
-## 2.4 线程上下文类加载器
+## 2.3 JDBC加载驱动
 
 我们在使用 JDBC 时，都需要加载 Driver 驱动，如果不写`Class.forName("com.mysql.jdbc.Driver")`，也是可以让 `com.mysql.jdbc.Driver` 正确加载的。
 
@@ -466,9 +449,6 @@ public class Demo01 {
 
 ```java
 public class Driver extends NonRegisteringDriver implements java.sql.Driver {
-    //
-    // Register ourselves with the DriverManager
-    //
     static {
         try {
             java.sql.DriverManager.registerDriver(new Driver());
@@ -610,70 +590,69 @@ private S nextService() {
 }
 ```
 
-## 2.5 自定义类加载器
+## 2.5 双亲委派模式
 
-使用场景如下：
+双亲委派模式，即调用类加载器ClassLoader 的 loadClass 方法时，查找类的规则
 
-- 想加载非 classpath 随意路径中的类文件
-- 通过接口来使用实现，希望解耦时，常用在框架设计
-- 这些类希望予以隔离，不同应用的同名类都可以加载，不冲突，常见于 tomcat 容器
+> 这里的双亲，翻译为上级似乎更为合适，因为它们并没有继承关系
 
-步骤如下：
-
-- 继承ClassLoader父类
-- 要遵从双亲委派机制，重写 ﬁndClass 方法。不是重写loadClass方法，否则不会走双亲委派机制
-- 读取类文件的字节码
-- 调用父类的 deﬁneClass 方法来加载类
-- 使用者调用该类加载器的 loadClass 方法
-
-准备好一个类文件放入 `D:\Bprogram\java\myclasspath`，先反编译看一下：
+loadClass源码如下：
 
 ```java
-D:\Bprogram\java\myclasspath>javap HelloWorld.class
-Compiled from "HelloWord.java"
-class HelloWorld {
-  HelloWorld();
-  public static void main(java.lang.String[]);
-}
-```
-
-接下来做一个我们自己的类加载器：
-
-```java
-class MyClassLoader extends ClassLoader {
-
-    @Override // name 就是类名称
-    protected Class<?> findClass(String name) throws ClassNotFoundException {
-        String path = "D:\\Bprogram\\java\\myclasspath\\" + name + ".class";
-
-        try {
-            ByteArrayOutputStream os = new ByteArrayOutputStream();
-            Files.copy(Paths.get(path), os);
-
-            // 得到字节数组
-            byte[] bytes = os.toByteArray();
-
-            // byte[] -> *.class
-            return defineClass(name, bytes, 0, bytes.length);
-
-        } catch (IOException e) {
-            e.printStackTrace();
-            throw new ClassNotFoundException("类文件未找到", e);
+protected Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
+    synchronized (getClassLoadingLock(name)) {
+        // 1. 检查该类是否已经加载
+        Class<?> c = findLoadedClass(name);
+        if (c == null) {
+            long t0 = System.nanoTime();
+            try {
+                if (parent != null) {
+                    // 2. 有上级的话，委派上级 loadClass
+                    c = parent.loadClass(name, false);
+                } else {
+                    // 3. 如果没有上级了（ExtClassLoader），则委派BootstrapClassLoader
+                    BootstrapClassLoader c = findBootstrapClassOrNull(name);
+                }
+            } catch (ClassNotFoundException e) {
+            }
+            if (c == null) {
+                long t1 = System.nanoTime();
+                // 4. 每一层找不到，调用 findClass 方法（每个类加载器自己扩展）来加载
+                c = findClass(name);
+                // 5. 记录耗时
+                sun.misc.PerfCounter.getParentDelegationTime().addTime(t1 - t0);
+                sun.misc.PerfCounter.getFindClassTime().addElapsedTimeFrom(t1);
+                sun.misc.PerfCounter.getFindClasses().increment();
+            }
         }
+        if (resolve) {
+            resolveClass(c);
+        }
+        return c;
     }
 }
 ```
 
 ```java
 public class Demo01 {
-    public static void main(String[] args) throws Exception {
-        MyClassLoader classLoader = new MyClassLoader();
-        Class<?> c1 = classLoader.loadClass("HelloWorld");
-        System.out.println(c1.getClassLoader());
+    public static void main(String[] args) throws ClassNotFoundException {
+        Class<?> testClass = Demo01.class.getClassLoader().loadClass("com.linxuan.demo03.Test");
+        System.out.println(testClass.getClassLoader());
     }
 }
-// 输出信息如下：com.linxuan.demo01.MyClassLoader@42a57993
 ```
+
+执行流程为：
+
+1. `sun.misc.Launcher$AppClassLoader` //1 处， 开始查看已加载的类，结果没有
+2. `sun.misc.Launcher$AppClassLoader` // 2 处，委派上级`sun.misc.Launcher$ExtClassLoader.loadClass()`
+3. `sun.misc.Launcher$ExtClassLoader` // 1 处，查看已加载的类，结果没有
+4. `sun.misc.Launcher$ExtClassLoader` // 3 处，没有上级了，则委派 `BootstrapClassLoader`查找
+5. `BootstrapClassLoader` 是在 `JAVA_HOME/jre/lib` 下找 H 这个类，显然没有
+6. `sun.misc.Launcher$ExtClassLoader` // 4 处，调用自己的 findClass 方法，是在`JAVA_HOME/jre/lib/ext` 下找 H 这个类，显然没有，回到 `sun.misc.Launcher$AppClassLoader`的 // 2 处
+7. 继续执行到 `sun.misc.Launcher$AppClassLoader` // 4 处，调用它自己的 findClass 方法，在classpath 下查找，找到了
+
+## 2.6 
 
 破坏双亲委派模式
 
