--- a/6-扩展/6-04【数据结构和算法-数据结构】.md
+++ b/6-扩展/6-04【数据结构和算法-数据结构】.md
@@ -327,7 +327,7 @@ static final class Node {
 
 二叉树中的遍历规则有如下三种：
 
-- 先序遍历：所谓的前序遍历就是先访问根节点，再访问左节点，最后访问右节点，即根-左-右遍历(前序)
+- 前序遍历：所谓的前序遍历就是先访问根节点，再访问左节点，最后访问右节点，即根-左-右遍历(前序)
 - 中序遍历：所谓的中序遍历就是先访问左节点，再访问根节点，最后访问右节点，即左-根-右遍历
 - 后序遍历：所谓的后序遍历就是先访问左节点，再访问右节点，最后访问根节点。即左-右-根遍历
 
