--- a/6-扩展/6-04【数据结构和算法-算法】.md
+++ b/6-扩展/6-04【数据结构和算法-算法】.md
@@ -758,7 +758,7 @@ public static void heapSort(int[] arr) {
     
     // 将数组看成完全二叉树，从最后一个非叶子节点(arr.length/2-1)开始调整至大顶堆，for循环运行完后成为大顶堆
     for (int i = len / 2 - 1; i >= 0; i--) {
-        adjustHeap(arr, i, arr.length);
+        adjustHeap(arr, i, len);
     }
     // 与末尾元素进行交换，然后将剩余n-1个元素重新构造成大顶堆。如此循环，最后就排好序了。
     for (int j = len - 1; j > 0; j--) {
@@ -1161,91 +1161,67 @@ private static void bfs(Node root) {
 
 ## 1.4 KMP算法
 
-KMP算法的核心，是一个被称为部分匹配表(Partial Match Table)的数组。
+KMP算法的核心，是一个被称为部分匹配表PMT(Partial Match Table)的数组。
 
-**PMT中的值是字符串的前缀集合与后缀集合的交集中最长元素的长度**。例如，对于”aba”，它的前缀集合为{”a”, ”ab”}，后缀 集合为{”ba”, ”a”}。两个集合的交集为{”a”}，那么长度最长的元素就是字符串”a”了，长 度为1，所以对于”aba”而言，它在PMT表中对应的值就是1。再比如，对于字符串”ababa”，它的前缀集合为{”a”, ”ab”, ”aba”, ”abab”}，它的后缀集合为{”baba”, ”aba”, ”ba”, ”a”}， 两个集合的交集为{”a”, ”aba”}，其中最长的元素为”aba”，长度为3。
+**PMT中的值是字符串的前缀集合与后缀集合的交集中最长元素的长度**。例如，对于”aba”，它的前缀集合为{”a”, ”ab”}，后缀集合为{”ba”, ”a”}。两个集合的交集为{”a”}，那么长度最长的元素就是字符串”a”了，长度为1，所以对于”aba”而言，它在PMT表中对应的值就是1。再比如，对于字符串”ababa”，它的前缀集合为{”a”, ”ab”, ”aba”, ”abab”}，它的后缀集合为{”baba”, ”aba”, ”ba”, ”a”}， 两个集合的交集为{”a”, ”aba”}，其中最长的元素为”aba”，长度为3。
 
 以图中的例子来说，在 i 处失配，那么主字符串和模式字符串的前边6位就是相同的。又因为模式字符串的前6位，它的前4位前缀和后4位后缀是相同的，所以我们推知主字符串i之前的4位和模式字符串开头的4位是相同的。就是图中的灰色部分。那这部分就不用再比较了。
 
 ![](..\图片\6-04【数据结构和算法-算法】\3-1KMP算法.jpg)
 
-有了上面的思路，我们就可以使用PMT加速字符串的查找了。我们看到如果是在 j 位 失配，那么影响 j 指针回溯的位置的其实是第 j −1 位的 PMT 值。所以我们可以构造一个next数组来搞。
+有了上面的思路，我们就可以使用PMT加速字符串的查找了。我们看到如果是在 j 位 失配，那么影响 j 指针回溯的位置的其实是第 j −1 位的 PMT 值。
 
-现在，我们再看一下如何编程快速求得next数组。其实，求next数组的过程完全可以看成字符串匹配的过程，即以模式字符串为主字符串，以模式字符串的前缀为目标字符串，一旦字符串匹配成功，那么当前的next值就是匹配成功的字符串的长度。
+对于模式字符串串 abababca 的字符 c 而言，由它发起的下一个匹配点跳转必然是字符 a 的位置。因为字符 c 位置的相同「前缀」和「后缀」字符 abab 的下一位置就是字符 a。可见从匹配串某个位置跳转下一个匹配位置这一过程是与原串无关的，我们将这一过程称为找 next 点。可以构造一个next数组来存储next点。
+
+求next数组的过程完全可以看成字符串匹配的过程，即以模式字符串为主字符串，以模式字符串的前缀为目标字符串，一旦字符串匹配成功，那么当前的next值就是匹配成功的字符串的长度。
 
 具体来说，就是从模式字符串的第一位(注意，不包括第0位)开始对自身进行匹配运算。 在任一位置，能匹配的最长长度就是当前位置的next值。
 
 ```java
-// 初始化next数组
-int[] next = new int[m];
-// j指向前缀末尾，同时代表最长相等前后缀的长度
-// i指向后缀末尾
-for (int i = 1, j = 0; i < m; i++) {
-    while (j > 0 && needle.charAt(i) != needle.charAt(j)) {
-        j = next[j - 1];
+// haystack=ababababca, needle=abababca
+// haystack是主字符串, needle是模式字符串
+public int strStr(String haystack, String needle) {
+    // n是主字符串长度，m是模式字符串长度
+    int n = haystack.length(), m = needle.length();
+    if (m == 0) {
+        return 0;
     }
-    if (needle.charAt(i) == needle.charAt(j)) {
-        j++;
-    }
-    next[i] = j;
-}
-```
 
-整体代码如下：
+    // 初始化next数组, next数组保存模式字符串当前索引的PMT值
+    int[] next = new int[m];
 
-```java
-public class Demo01 {
-    public static void main(String[] args) {
-        Demo01 demo01 = new Demo01();
-        /*
-            输入：haystack = "hello", needle = "ll"
-            输出：2
-         */
-        String haystack = "aabaabaafa";
-        String needle = "aabaaf";
-        // 0 1 0 1 2 0
-        System.out.println(demo01.strStr(haystack, needle));
-
-    }
-    
-    public int strStr(String haystack, String needle) {
-        int n = haystack.length(), m = needle.length();
-        if (m == 0) {
-            return 0;
+    // 00123401  abababca
+    // 从i=1开始截取字符串依次进行匹配，查找PMT值
+    // i指向模式字符串后缀末尾
+    // j指向模式字符串前缀末尾，同时代表最长相等前后缀的长度
+    for (int i = 1, j = 0; i < m; i++) {
+        // 如果之前已经有PMT并且不等，那么回溯赋值
+        while (j > 0 && needle.charAt(i) != needle.charAt(j)) {
+            j = next[j - 1];
         }
-
-        // 初始化next数组
-        int[] next = new int[m];
-        // j指向前缀末尾，同时代表最长相等前后缀的长度
-        // i指向后缀末尾
-        for (int i = 1, j = 0; i < m; i++) {
-            while (j > 0 && needle.charAt(i) != needle.charAt(j)) {
-                j = next[j - 1];
-            }
-            if (needle.charAt(i) == needle.charAt(j)) {
-                j++;
-            }
-            next[i] = j;
+        // 如果前缀字符串和后缀字符串相等，那么PMT+1
+        if (needle.charAt(i) == needle.charAt(j)) {
+            j++;
         }
-
-        // aabaabaafa
-        // aabaaf
-        // 010120
-        // i指向原字符串
-        // j指向匹配字符串
-        for (int i = 0, j = 0; i < n; i++) {
-            while (j > 0 && haystack.charAt(i) != needle.charAt(j)) {
-                j = next[j - 1];
-            }
-            if (haystack.charAt(i) == needle.charAt(j)) {
-                j++;
-            }
-            if (j == m) {
-                return i - m + 1;
-            }
-        }
-        return -1;
+        // 赋值
+        next[i] = j;
     }
+
+    // haystack=ababababca, needle=abababca
+    // i指向主字符串
+    // j指向模式字符串
+    for (int i = 0, j = 0; i < n; i++) {
+        while (j > 0 && haystack.charAt(i) != needle.charAt(j)) {
+            j = next[j - 1];
+        }
+        if (haystack.charAt(i) == needle.charAt(j)) {
+            j++;
+        }
+        if (j == m) {
+            return i - m + 1;
+        }
+    }
+    return -1;
 }
 ```
 
@@ -1478,6 +1454,27 @@ public static void inorderTraversal(TreeNode root) {
 ```
 
 前序遍历 (preorder traversal) - 中序遍历 (inorder traversal) - 后序遍历 (postorder traversal)
+
+## 5.1.3 树的构造
+
+```java
+// 根据数组构造二叉树
+public static TreeNode creatTreeNode(Integer[] arr, int index) {
+    if (index >= arr.length) {
+        return null;
+    }
+
+    if (arr[index] == null) {
+        return null;
+    }
+    TreeNode root = new TreeNode(arr[index]);
+
+    root.left = creatTreeNode(arr, ++index);
+    root.right = creatTreeNode(arr, ++index);
+
+    return root;
+}
+```
 
 ## 1.9 筛选素数/质数
 
@@ -1738,3 +1735,6 @@ int mid2 = left + ((right - left) >> 1);
 2. 任何数和其自身做异或运算，结果是`0`，即`a⊕a=0`。
 3. 异或运算满足交换律和结合律，即`a⊕b⊕a=b⊕a⊕a=b⊕(a⊕a)=b⊕0=b`。
 
+## 4.3 数学
+
+前N项和公式：`Sn=n*a1+n(n-1)d/2`或`Sn=n(a1+an)/2`
