--- a/6-扩展/6-05【设计模式1-基础】.md
+++ b/6-扩展/6-05【设计模式1-基础】.md
@@ -620,7 +620,41 @@ public class Agent {
 
 ![](D:\Java\笔记\图片\6-05【设计模式1-基础】\3-6合成复用原则2.png)
 
-# 第四章 自定义Spring框架
+# 第四章 常见面试题
+
+## 4.1 说一下你知道的设计模式
+
+**创建型模式**
+
+用于描述“怎样创建对象”，它的主要特点是“将对象的创建与使用分离”。有单例、原型、工厂方法、抽象工厂、建造者 5 种创建型模式。
+
+**结构型模式**
+
+用于描述如何将类或对象按某种布局组成更大的结构，有代理、适配器、桥接、装饰、外观、享元、组合 7 种结构型模式。
+
+**行为型模式**
+
+用于描述类或对象之间怎样相互协作共同完成单个对象无法单独完成的任务，以及怎样分配职责。有模板方法、策略、命令、职责链、状态、观察者、中介者、迭代器、访问者、备忘录、解释器 11 种行为型模式。
+
+## 4.2 工厂方法模式和抽象工厂模式区别
+
+
+
+## 4.3 JDK中用到了哪些设计模式
+
+## 4.4 Spring中用到了哪些设计模式
+
+## 4.5 设计模式六大原则
+
+## 4.6 单例模式优缺点
+
+## 4.7 手写单例模式
+
+## 4.8 说一下观察者模式
+
+## 4.9 说一下策略模式
+
+# 第五章 自定义Spring框架
 
 自定义spring框架前，先回顾一下spring框架的使用，从而分析spring的核心，并对核心功能进行模拟。
 
