--- a/6-扩展/6-00【通用基础知识】.md
+++ b/6-扩展/6-00【通用基础知识】.md
@@ -446,6 +446,19 @@ flowchart TB
    - `[a-z&&[^bc]]` `a` 到 `z`，除了 `b` 和  `c`：`[ad-z]`（减去）
    - `[a-z&&[^m-p]]` `a` 到 `z`，而非 `m` 到  `p`：`[a-lq-z]`（减去）
 
+
+
+[abc] 表示a或b或c
+[a-zA-Z] 表示a到z或A到Z（包括两头字母）
+\d 表示数字[0-9]
+\D 表示非数字
+\w 表示单词字符[a-zA-Z_0-9]
+\W 表示非单词字符
+\s 表示空白字符（如空格、制表位\t、换行\n等）
+x{n} 表示x，恰好n次
+x{n,} 表示x，至少n次
+x{m,n} 表示至少m次，但是不超过n次
+
 ## 6.2 实体类型
 
 ![](..\图片\6-00【通用基础知识】\实体名称.png)
